--- a/src/app/template/template.page.html
+++ b/src/app/template/template.page.html
@@ -33,11 +33,10 @@
 
   </ion-list>
 
-  <stylo-editor></stylo-editor>
-
+  <!--
+  <stylo-editor lang="de"></stylo-editor>
+  -->
   <div id="htmlpreview" contenteditable="true">
-
-
   </div>
 
   </ion-content>
