--- a/templates/teamRequestEmail.html
+++ b/templates/teamRequestEmail.html
@@ -123,7 +123,7 @@
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;"> Wir haben deine Beitrittsanfrage an das Team "{{teamName}}" gesendet. Bitte gedulde dich noch etwas. </p>
+              <p style="margin: 0;"> Wir haben deine Beitrittsanfrage an das Team {{teamName}} gesendet. Bitte gedulde dich noch etwas. </p>
             </td>
           </tr> <!-- COPY -->
           <tr>
