--- a/templates/clubRequestEmail.html
+++ b/templates/clubRequestEmail.html
@@ -83,7 +83,7 @@
   <!-- HIDDEN PREHEADER TEXT -->
   <div
     style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    Hallo {{firstName}}! Wir haben deine Beitrittsanfrage an den Club {{clubName}} gesendet. </div>
+    Hallo {{firstName}} {{lastName}}! Wir haben deine Beitrittsanfrage an den Club {{clubName}} gesendet. </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
     <!-- LOGO -->
     <tr>
@@ -108,7 +108,7 @@
           <tr>
             <td bgcolor="#ffffff" align="center" valign="top"
               style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Titillium Web', Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-              <h1 style="font-size: 48px; font-weight: 400; margin: 0;">Hallo {{firstName}}</h1>
+              <h1 style="font-size: 48px; font-weight: 400; margin: 0;">Hallo {{firstName}} {{lastName}}!</h1>
             </td>
           </tr>
         </table>
