--- a/templates/teamRequestAdminEmail.html
+++ b/templates/teamRequestAdminEmail.html
@@ -1,106 +1,13 @@
-<!-- THIS EMAIL WAS BUILT AND TESTED WITH LITMUS http://litmus.com -->
-<!-- IT WAS RELEASED UNDER THE MIT LICENSE https://opensource.org/licenses/MIT -->
-<!-- QUESTIONS? TWEET US @LITMUSAPP -->
-<!DOCTYPE html>
-<html>
+{{> _HEADER }}
 
-<head>
-  <title></title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Titillium+Web:wght@900&display=swap"
-    rel="stylesheet">
-  <style type="text/css">
-    /* FONTS */
-    /* CLIENT-SPECIFIC STYLES */
-    body,
-    table,
-    td,
-    a {
-      -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
-    }
-
-    table,
-    td {
-      mso-table-lspace: 0pt;
-      mso-table-rspace: 0pt;
-    }
-
-    img {
-      -ms-interpolation-mode: bicubic;
-    }
-
-    /* RESET STYLES */
-    img {
-      border: 0;
-      height: auto;
-      line-height: 100%;
-      outline: none;
-      text-decoration: none;
-    }
-
-    table {
-      border-collapse: collapse !important;
-    }
-
-    body {
-      height: 100% !important;
-      margin: 0 !important;
-      padding: 0 !important;
-      width: 100% !important;
-    }
-
-    /* iOS BLUE LINKS */
-    a[x-apple-data-detectors] {
-      color: inherit !important;
-      text-decoration: none !important;
-      font-size: inherit !important;
-      font-family: inherit !important;
-      font-weight: inherit !important;
-      line-height: inherit !important;
-    }
-
-    /* MOBILE STYLES */
-    @media screen and (max-width:600px) {
-      h1 {
-        font-size: 32px !important;
-        line-height: 32px !important;
-      }
-    }
-
-    /* ANDROID CENTER FIX */
-    div[style*="margin: 16px 0;"] {
-      margin: 0 !important;
-    }
-
-  </style>
-</head>
-
-<body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;">
-  <!-- HIDDEN PREHEADER TEXT -->
+<body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;"> <!-- HIDDEN PREHEADER TEXT -->
   <div
     style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
     Hallo {{teamName}}. Neue Beitrittsanfrage für dein Team {{teamName}}. </div>
-  <table border="0" cellpadding="0" cellspacing="0" width="100%">
-    <!-- LOGO -->
-    <tr>
-      <td bgcolor="#000000" align="center">
-        <!--[if (gte mso 9)|(IE)]>             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">             <tr>             <td align="center" valign="top" width="600">             <![endif]-->
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-          <tr>
-            <td align="center" valign="top" style="padding: 40px 10px 40px 10px;"> <a href="http://my-club.app"
-                target="_blank"> <img alt="Logo" src="https://my-club.app/icons/icon-512x512.png"
-                  width="40" height="40"
-                  style="display: block; width: 200px; max-width: 200px; min-width: 40px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; color: #ffffff; font-size: 18px;"
-                  border="0"> </a> </td>
-          </tr>
-        </table>
-        <!--[if (gte mso 9)|(IE)]>             </td>             </tr>             </table>             <![endif]-->
-      </td>
-    </tr> <!-- HERO -->
+  <table border="0" cellpadding="0" cellspacing="0" width="100%"> <!-- LOGO -->
+    {{> _LOGO }}
+
+    <!-- HERO -->
     <tr>
       <td bgcolor="#000000" align="center" style="padding: 0px 10px 0px 10px;">
         <!--[if (gte mso 9)|(IE)]>             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">             <tr>             <td align="center" valign="top" width="600">             <![endif]-->
@@ -118,8 +25,7 @@
     <tr>
       <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
         <!--[if (gte mso 9)|(IE)]>             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">             <tr>             <td align="center" valign="top" width="600">             <![endif]-->
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-          <!-- COPY -->
+        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;"> <!-- COPY -->
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
@@ -136,54 +42,25 @@
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;">{{firstName}} {{lastName}} {{email}}
-              </p>
+              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;">{{firstName}}
+                {{lastName}} {{email}} </p>
             </td>
           </tr> <!-- COPY -->
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;">möchte deinem Team beitreten. Bitte bearbeite die Anfrage in der App, indem du unter Administration, dein Team öffnest.
-              </p>
+              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;">möchte deinem
+                Team beitreten. Bitte bearbeite die Anfrage in der App, indem du unter Administration, dein Team
+                öffnest. </p>
             </td>
           </tr> <!-- COPY -->
-          <tr>
-            <td bgcolor="#ffffff" align="left"
-              style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;">Sportliche Grüsse</p>
-              <p style="margin: 0;">Dein myclub | the next generation Team</p>
-            </td>
-          </tr>
-        </table>
-        <!--[if (gte mso 9)|(IE)]>             </td>             </tr>             </table>             <![endif]-->
-      </td>
-    </tr> <!-- COPY SPENDEN -->
-    <tr>
-      <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
-        <!--[if (gte mso 9)|(IE)]>           <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">           <tr>           <td align="center" valign="top" width="600">           <![endif]-->
-         
-        <!--[if (gte mso 9)|(IE)]>           </td>           </tr>           </table>           <![endif]-->
-      </td>
-    </tr> <!-- FOOTER -->
-    <tr>
-      <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
-        <!--[if (gte mso 9)|(IE)]>             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">             <tr>             <td align="center" valign="top" width="600">             <![endif]-->
-        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
-          <!-- NAVIGATION               <tr>                 <td bgcolor="#f4f4f4" align="left" style="padding: 30px 30px 30px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;" >                   <p style="margin: 0;">                     <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">Dashboard</a> -                     <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">Billing</a> -                     <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">Help</a>                   </p>                 </td>               </tr> -->
-          <!-- PERMISSION REMINDER               <tr>                 <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;" >                   <p style="margin: 0;">You received this email because you canceled your account. If it looks weird, <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">view it in your browser</a>.</p>                 </td>               </tr> -->
-          <!-- UNSUBSCRIBE               <tr>                 <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;" >                   <p style="margin: 0;">If these emails get annoying, please feel free to <a href="http://litmus.com" target="_blank" style="color: #111111; font-weight: 700;">unsubscribe</a>.</p>                 </td>               </tr> -->
-          <!-- ADDRESS -->
-          <tr>
-            <td bgcolor="#f4f4f4" align="left"
-              style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;">
-              <p style="margin: 0;">&reg; myclub | the next generation 2023</p>
-            </td>
-          </tr>
-        </table>
-        <!--[if (gte mso 9)|(IE)]>             </td>             </tr>             </table>             <![endif]-->
-      </td>
-    </tr>
-  </table>
+          {{> _GREETING }}
+      </table> <!--[if (gte mso 9)|(IE)]> </td> </tr> </table> <![endif]-->
+  </td>
+</tr>
+<!-- FOOTER -->
+{{> _FOOTER }}
+</table>
 </body>
 
 </html>
