--- a/templates/userCreateWelcomeEmail.html
+++ b/templates/userCreateWelcomeEmail.html
@@ -3,10 +3,12 @@
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;"> <!-- HIDDEN PREHEADER TEXT -->
   <div
     style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    Hallo {{firstName}}! Wir haben deine Beitrittsanfrage an das Team {{teamName}} gesendet. </div>
+    Hallo {{firstName}} ! Damit du myclub | the next generation verwenden kannst, musst du zuerst deine E-Mail Adresse
+    bestätigen. </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%"> <!-- LOGO -->
+    
     {{> _LOGO }}
-
+    
     <!-- HERO -->
     <tr>
       <td bgcolor="#000000" align="center" style="padding: 0px 10px 0px 10px;">
@@ -29,29 +31,42 @@
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;"> Wir haben deine Beitrittsanfrage an das Team {{teamName}} gesendet. Bitte gedulde
-                dich noch etwas. </p>
+              <p style="margin: 0;"> Damit du myclub | the next generation verwenden kannst, musst du zuerst deine
+                E-Mail Adresse bestätigen.</p>
             </td>
           </tr> <!-- COPY -->
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;"> Sobald deine
-                Anfrage von den Verantwortlichen angenommen wurde, kannst du dich wieder voll und ganz deiner
-                Lieblingsbeschäftigung widmen. </p>
+              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;">
+                Anschliessend kannst du einem Club beitreten und dich wieder voll und ganz deiner Lieblingsbeschäftigung
+                widmen. </p>
             </td>
           </tr> <!-- COPY -->
+
           {{> _GREETING }}
+          <tr>
+            <td bgcolor="#ffffff" align="left">
+              <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                <tr>
+                  <td bgcolor="#ffffff" align="center" style="padding: 20px 30px 60px 30px;">
+                    <table border="0" cellspacing="0" cellpadding="0">
+                      <tr>
+                        <td align="center" style="border-radius: 3px;" bgcolor="#3880ff"><a href="{{link}}"
+                            target="_blank"
+                            style="font-size: 20px; font-family: 'Maven Pro', Arial, sans-serif; color: #FFFFFF; text-decoration: none; color: #FFFFFF; text-decoration: none; padding: 15px 25px; border-radius: 5px; border: 1px solid #3880ff; display: inline-block;">Jetzt
+                            E-Mail Adresse bestätigen</a></td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
         </table>
         <!--[if (gte mso 9)|(IE)]>             </td>             </tr>             </table>             <![endif]-->
       </td>
-    </tr> <!-- COPY SPENDEN -->
-    <tr>
-      <td bgcolor="#f4f4f4" align="center" style="padding: 0px 10px 0px 10px;">
-        <!--[if (gte mso 9)|(IE)]>           <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">           <tr>           <td align="center" valign="top" width="600">           <![endif]-->
-        <!--[if (gte mso 9)|(IE)]>           </td>           </tr>           </table>           <![endif]-->
-      </td>
-    </tr>
+    </tr> 
     <!-- FOOTER -->
     {{> _FOOTER }}
   </table>
