--- a/templates/teamRequestApproved.html
+++ b/templates/teamRequestApproved.html
@@ -1,4 +1,4 @@
-{{> _HEADER }}
+{{> HEADER }}
 
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;"> <!-- HIDDEN PREHEADER TEXT -->
     <div
