--- a/templates/teamRequestApproved.html
+++ b/templates/teamRequestApproved.html
@@ -36,8 +36,8 @@
                             style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p
                                 style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;">
-                                Du kannst ab sofort myclub | the next generation verwenden. Viel Erfolg mit deinem
-                                Verein! </p>
+                                Du wurdest dem Team {{teamName}} hinzugefügt. Viel Erfolg mit deinem
+                                neuen Team! </p>
                         </td>
                     </tr> <!-- COPY -->
                     {{> _GREETING }}
