--- a/templates/reportingUser.html
+++ b/templates/reportingUser.html
@@ -1,13 +1,10 @@
-{{> HEADER }}
+{{> _HEADER }}
 
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;"> <!-- HIDDEN PREHEADER TEXT -->
   <div
     style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
     Hallo {{firstName}}! Hier kommt dein my-club Update der Woche!</div>
-  <table border="0" cellpadding="0" cellspacing="0" width="100%"> <!-- LOGO -->
-    {{> _LOGO }}
-
-    <!-- HERO -->
+  <table border="0" cellpadding="0" cellspacing="0" width="100%"> <!-- LOGO --> {{> _LOGO }} <!-- HERO -->
     <tr>
       <td bgcolor="#000000" align="center" style="padding: 0px 10px 0px 10px;">
         <!--[if (gte mso 9)|(IE)]>             <table align="center" border="0" cellspacing="0" cellpadding="0" width="600">             <tr>             <td align="center" valign="top" width="600">             <![endif]-->
@@ -31,42 +28,32 @@
               style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
               <p style="margin: 0;"> Hier kommt dein my-club Update der Woche!</p>
             </td>
-          </tr>
-
-          <!-- Training -->
+          </tr> <!-- Training -->
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
               <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;"> Deine
                 Trainings von nächster Woche: </p>
             </td>
-          </tr>
-
-          <!-- HELFER -->
+          </tr> <!-- HELFER -->
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;"> Hier ist deine Hilfe gefragt: </p>
+              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;"> Hier ist
+                deine Hilfe gefragt: </p>
             </td>
-          </tr>
-     
-
-          <!-- NEWS -->
+          </tr> <!-- NEWS -->
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
               <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;"> Deine
                 Club-News der letzten Tage: </p>
             </td>
-          </tr>
-          <!-- CLUB NEWS -->
-          {{#clubNews}}
-          <tr>
+          </tr> <!-- CLUB NEWS --> {{#clubNews}} <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
               <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;"> {{title}}
-                {{leadText}}
-              </p>
+                {{leadText}} </p>
             </td>
           </tr> <!-- Button -->
           <tr>
@@ -86,24 +73,17 @@
                 </tr>
               </table>
             </td>
-          </tr>
-          {{/clubNews}}
-
-
-          <!-- EVENTS -->
+          </tr> {{/clubNews}} <!-- EVENTS -->
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 0px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;"> Das sind die nächsten Events: </p>
+              <p style="margin: 0;color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif;"> Das sind die
+                nächsten Events: </p>
             </td>
-          </tr>     
-
-          {{> _GREETING }}
+          </tr> {{> _GREETING }}
         </table> <!--[if (gte mso 9)|(IE)]> </td> </tr> </table> <![endif]-->
       </td>
-    </tr>
-    <!-- FOOTER -->
-    {{> _FOOTER }}
+    </tr> <!-- FOOTER --> {{> _FOOTER }}
   </table>
 </body>
 
