--- a/templates/trainingReminder.html
+++ b/templates/trainingReminder.html
@@ -2,7 +2,7 @@
 
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;">
     <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-        Erinnerung: Training {{trainingName}} findet bald statt.
+        Erinnerung: Das Training {{trainingName}} am {{trainingDatum}} um {{trainingZeit}} findet bald statt. Bitte melde dich an/ab.
     </div>
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         {{> _LOGO }}
@@ -12,7 +12,7 @@
                     <tr>
                         <td bgcolor="#ffffff" align="center" valign="top"
                             style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Titillium Web', Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                            <h1 style="font-size: 48px; font-weight: 400; margin: 0;">Training: {{trainingName}} am {{trainingDatum}}, {{trainingZeit}}</h1>
+                            <h1 style="font-size: 48px; font-weight: 400; margin: 0;">Erinnerung: Das Training {{trainingName}} am {{trainingDatum}} um {{trainingZeit}} findet bald statt. Bitte melde dich an/ab.</h1>
                         </td>
                     </tr>
                 </table>
@@ -25,7 +25,7 @@
                         <td bgcolor="#ffffff" align="left"
                             style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                             <p style="margin: 0;">Hallo {{firstName}} {{lastName}},</p>
-                            <p style="margin: 20px 0 0 0;">Dies ist eine Erinnerung an das bevorstehende Training:</p>
+                            <p style="margin: 20px 0 0 0;">Dies ist eine Erinnerung an das bevorstehende Training - bitte melde dich an oder ab, falls du nicht teilnehmen kannst:</p>
                             <table style="width: 100%; margin-top: 20px; border-collapse: collapse;">
                                 <tr>
                                     <td style="padding: 10px; border-bottom: 1px solid #eee; color: #666666;">Training:</td>
@@ -34,10 +34,6 @@
                                 <tr>
                                     <td style="padding: 10px; border-bottom: 1px solid #eee; color: #666666;">Team:</td>
                                     <td style="padding: 10px; border-bottom: 1px solid #eee; color: #333333;"><b>{{teamName}}</b></td>
-                                </tr>
-                                <tr>
-                                    <td style="padding: 10px; border-bottom: 1px solid #eee; color: #666666;">Trainer:</td>
-                                    <td style="padding: 10px; border-bottom: 1px solid #eee; color: #333333;"><b>{{trainerName}}</b></td>
                                 </tr>
                                 <tr>
                                     <td style="padding: 10px; border-bottom: 1px solid #eee; color: #666666;">Ort:</td>
