--- a/templates/trainingCancellation.html
+++ b/templates/trainingCancellation.html
@@ -2,7 +2,7 @@
 
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;">
     <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-        Wichtige Information: Training {{trainingName}} wurde abgesagt.
+        Das Training {{trainingName}} vom {{trainingDatum}} um {{trainingZeit}} wurde abgesagt.
     </div>
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         {{> _LOGO }}
@@ -12,7 +12,7 @@
                     <tr>
                         <td bgcolor="#ffffff" align="center" valign="top"
                             style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Titillium Web', Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                            <h1 style="font-size: 48px; font-weight: 400; margin: 0;">Training abgesagt</h1>
+                            <h1 style="font-size: 48px; font-weight: 400; margin: 0;">Das Training {{trainingName}} vom {{trainingDatum}} um {{trainingZeit}} wurde abgesagt.</h1>
                         </td>
                     </tr>
                 </table>
