--- a/templates/reportingUser.html
+++ b/templates/reportingUser.html
@@ -3,7 +3,7 @@
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;"> <!-- HIDDEN PREHEADER TEXT -->
   <div
     style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    Hallo {{firstName}}! Hier kommt dein my-club Update der Woche!</div>
+    Hallo {{firstName}}! Hier kommt dein myclub Update der Woche!</div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%"> <!-- LOGO -->
     {{> _LOGO }}
 
@@ -29,7 +29,7 @@
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;"> Hier kommt dein my-club Update der Woche!</p>
+              <p style="margin: 0;"> Hier kommt dein myclub Update der Woche!</p>
             </td>
           </tr> <!-- COPY -->
           <tr>
