--- a/templates/verifiyKidsEmail.html
+++ b/templates/verifiyKidsEmail.html
@@ -3,7 +3,7 @@
 <body style="background-color: #f4f4f4; margin: 0 !important; padding: 0 !important;"> <!-- HIDDEN PREHEADER TEXT -->
   <div
     style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    Hallo {{firstNameKid}} ! {{firstNameParent}} {{lastNameParent}} möchte dich als Kind im my-club Profil hinzufügen. </div>
+    Hallo {{firstNameKid}} ! {{firstNameParent}} {{lastNameParent}} möchte dich als Kind im myclub Profil hinzufügen. </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%"> <!-- LOGO -->
     
     {{> _LOGO }}
@@ -30,7 +30,7 @@
           <tr>
             <td bgcolor="#ffffff" align="left"
               style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Maven Pro', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-              <p style="margin: 0;"> {{firstNameParent}} {{lastNameParent}} möchte dich als Kind im my-club Profil hinzufügen. Bitte überprüfe die Anfrage und klicke auf den Link um die Anfrage zu bestätigen.</p>
+              <p style="margin: 0;"> {{firstNameParent}} {{lastNameParent}} möchte dich als Kind im myclub Profil hinzufügen. Bitte überprüfe die Anfrage und klicke auf den Link um die Anfrage zu bestätigen.</p>
             </td>
           </tr> <!-- COPY -->
           <tr>
