--- a/templates/clubInvoice.html
+++ b/templates/clubInvoice.html
@@ -6,7 +6,7 @@
     Hallo {{firstName}} {{lastName}}, deine Rechnung für {{clubName}} ist jetzt verfügbar. Verwendungszweck: {{purpose}}.
   </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%">
-    {{#if clublogo}}
+    {{#if clubLogo}}
       {{> _CLUBLOGO }}
     {{else}}
       {{> _LOGO }}
